<resources>
    <string name="app_name">Thermal Threads</string>
    <string name="title_activity_settings">Settings</string>
    <string name="button">Allow location access</string>

    <string name="setup_title_string">Thermal Threads Setup Screen</string>

    <!-- Strings related to Settings -->
    <string name="pref_firstRun">Reset this app?</string>
    <string name="pref_firstRun_summ">Check this box </string>
    <string name="pref_change_zip">Change Zip-code?</string>

    <string name="name">Name:</string>
    <string name="default_name">John Smith</string>
    <string name="choose_to_allow_location_question">Click button to allow access to location, or enter your zipcode</string>
    <string name="pref_allow_location">Allow Access</string>
    <string name="zipcode">Zip-code</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="advance_screen">Let\'s get to it!</string>
    <string name="temp_overview_descrip">Quick Overview of the weather, just temperature, wind/rain. </string>
    <string name="work_clothes">Work</string>
    <string name="casual_clothes">Casual</string>
    <string name="temp_clothing_descrip">This will talk about what to wear. its windy so bring pants</string>
    <string name="settings_title">Settings</string>
    <string name="specify_zipcode">Specify Zipcode</string>
    <string name="change_name">Change Name</string>
    <string name="pref_change_weather">Change Weather Provider with dropdown menu</string>
    <string name="about_intro">This app is a project by Alex Hover, and Courtney Kaminski. It\'s pretty great IMO</string>
    <string name="activity_label_settings">Settings</string>
    <string name="activity_label_about">About Us</string>
    <string name="activity_label_setup">Set Up</string>
    <string name="refresh">Refresh</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="weather_last_pulled">Weather last generated:</string>
    <string name="image_content_description">Clothes</string>
    <string name="mwork1">You can choose from: A down or wool winter jacket, a button down shirt and/or sweater, chinos or dress pants, boots or dress shoes.</string>
    <string name="mcasual1">You can choose from: A down or wool winter jacket, a sweater or sweatshirt, a short sleeve or long sleeve shirt, jeans or sweatpants, boots, sneakers, or casual shoes.</string>
    <string name="mwork2">You can choose from: A down, wool, or water resistant winter jacket, a button down and/or a sweater, chinos or dress pants, boots or dress shoes.</string>
    <string name="mcasual2">You can choose from: A down, wool, or water resistant winter jacket, a sweater or sweatshirt, a short sleeve shirt or long sleeve shirt, jeans or sweatpants, boots, sneakers, or casual shoes.</string>
    <string name="mwork3">You can choose from: A medium weight jacket, a light sweater or cardigan, a button down,chinos or dress pants, boots or dress shoes.</string>
    <string name="mcasual3">You can choose from: A medium weight jacket, a light sweater or cardigan, a sweatshirt, a short sleeve or long sleeve shirt, jeans or sweatpants, boots, sneakers, or casual shoes.</string>
    <string name="mwork4">You can choose from: A medium weight or water resistant jacket, a light sweater or cardigan, a button down, chinos or dress pants, boots or dress shoes.</string>
    <string name="mcasual4">You can choose from: A medium weight/water resistant jacket, a light sweater or a cardigan, a sweatshirt, a short sleeve or long sleeve shirt, jeans or sweatpants, boots, sneakers, or casual shoes.</string>
    <string name="mwork5">You can choose from: A light jacket or no jacket, a short sleeve or long sleeve button down, chinos or dress pants, boots or dress shoes.</string>
    <string name="mcasual5">You can choose from: A light jacket or no jacket, a sweatshirt, a short sleeve or long sleeve shirt, jeans or shorts, boots, sneakers, or casual shoes.</string>
    <string name="mwork6">You can choose from: A light or water resistant jacket, a short sleeve or long sleeve button down, chinos or dress pants, boots or dress shoes.</string>
    <string name="mcasual6">You can choose from: A light or water resistant jacket, a sweatshirt, a short sleeve or long sleeve shirt, jeans or shorts, boots, sneakers, or casual shoes.</string>
    <string name="mwork7">You can choose from: A short sleeve or a long sleeve button down, chinos or dress pants, boots or dress shoes.</string>
    <string name="mcasual7">You can choose from: A short sleeve shirt or tank top, jeans or shorts, sneakers, or casual sandals.</string>
    <string name="mwork8">You can choose from: A light water resistant jacket, a short sleeve or long sleeve button down, chinos or dress pants, dress shoes.</string>
    <string name="mcasual8">You can choose from: A light or water resistant jacket, a short sleeve shirt or tank top, jeans or shorts, sneakers, or casual sandals.</string>
    <string name="fwork1">You can choose from: A down or wool winter jacket, a dress with tights, a sweater, a blouse, skirt with tights, or dress pants, heels, flats, or dress shoes.</string>
    <string name="fcasual1">You can choose from: A down or wool winter jacket, a sweater or sweatshirt, a short sleeve or long sleeve shirt, jeans or sweatpants, boots, sneakers, flats, or casual shoes.</string>
    <string name="fwork2">You can choose from: A down, wool, or water resistant winter jacket, a dress with tights, a sweater, a blouse, skirt with tights, or dress pants, boots, flats, or dress shoes.</string>
    <string name="fcasual2">You can choose from: A down, wool, or water resistant winter jacket, a sweater or sweatshirt, a short sleeve shirt or long sleeve shirt, jeans or sweatpants, boots, sneakers, or casual shoes.</string>
    <string name="fwork3">You can choose from: A medium weight jacket, a dress with tights, a light sweater or cardigan, a blouse, skirt with tights, or dress pants, boots, heels, flats or dress shoes.</string>
    <string name="fcasual3">You can choose from: A medium weight jacket, a dress with tights, a light sweater or cardigan, a sweatshirt, a short sleeve or long sleeve shirt, jeans or sweatpants, a skirt with tights, boots, sneakers, or casual shoes.</string>
    <string name="fwork4">You can choose from: A medium weight or water resistant jacket, a dress with tights, a light sweater or cardigan, a blouse, a skirt with tights, or dress pants, boots, heels, flats, or dress shoes.</string>
    <string name="fcasual4">You can choose from: A medium weight/water resistant jacket, a dress with tights, a light sweater or a cardigan, a sweatshirt, a short sleeve or long sleeve shirt, jeans, a skirt with tights, or sweatpants, boots, sneakers, or casual shoes.</string>
    <string name="fwork5">You can choose from: A light jacket or no jacket, a short sleeve or long sleeve blouse, a dress, skirt, or dress pants, boots, heels, or flats.</string>
    <string name="fcasual5">You can choose from: A light jacket or no jacket, a sweatshirt, a short sleeve or long sleeve shirt, jeans or shorts, a dress or skirt, boots, sneakers, flats, or casual shoes.</string>
    <string name="fwork6">You can choose from: A light or water resistant jacket, a short sleeve or long sleeve blouse, a dress, skirt, or dress pants, boots, flats, or dress shoes.</string>
    <string name="fcasual6">You can choose from: A light or water resistant jacket, a sweatshirt, a short sleeve or long sleeve shirt, jeans or shorts, a dress or skirt, boots, sneakers, flats, heels, or casual shoes.</string>
    <string name="fwork7">You can choose from: A short sleeve or a long sleeve blouse, a dress, skirt, or dress pants, heels, flats, dress sandals, or dress shoes.</string>
    <string name="fcasual7">You can choose from: A short sleeve shirt or tank top, jeans or shorts, a dress or skirt, sneakers, flats, or casual sandals.</string>
    <string name="fwork8">You can choose from: A light or water resistant jacket, a short sleeve or long sleeve blouse, a dress, skirt, or dress pants, heels, flats, dress sandals, or dress shoes.</string>
    <string name="fcasual8">You can choose from: A light or water resistant jacket, a short sleeve shirt or tank top, jeans or shorts, a dress or skirt, sneakers, flats, heels, or casual sandals.</string>
    <string name="weather_yesterday_was">Weather yesterday was:</string>
</resources>
