<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/default_name"
        android:key="name"
        android:title="@string/change_name" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="gender"
        android:title="@string/male" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="location_access"
        android:disableDependentsState="true"
        android:title="@string/pref_allow_location" />

    <EditTextPreference
        android:dependency="location_access"
        android:key="zip"
        android:summary="@string/pref_change_zip"
        android:title="@string/zipcode" />

</PreferenceScreen>